<resources>
	<string name="app_name">SNMPLights</string>

	<!-- Preferences -->
	<string name="prefs_name">Preferences</string>

	<string name="prefs_snmp">SNMP Settings</string>
	<string name="prefs_oidbase">OID base</string>
	<string name="prefs_host">SNMP Agent Hostname</string>
	<string name="prefs_port">SNMP Agent Port</string>
	<string name="prefs_username">SNMPv3 Username</string>
	<string name="prefs_auth_password">SNMPv3 Auth Password</string>
	<string name="prefs_auth_protocol">SNMPv3 Auth Protocol</string>
	<string name="prefs_priv_password">SNMPv3 Priv Password</string>
	<string name="prefs_priv_protocol">SNMPv3 Priv Protocol</string>

	<!-- indicates no value in a list -->
	<string name="none">None</string>

	<string name="preferences">Preferences</string>

	<!-- menu -->
	<string name="menu_prefs">Prefs</string>
	<string name="menu_refresh">Refresh</string>

	<!-- devices -->

	<!-- switches -->
	<string name="switch_on">On</string>
	<string name="switch_off">Off</string>

	<!-- empty -->
	<string name="empty">No devices found</string>

	<!-- invalid -->
	<string name="invalid">Invalid configuration</string>

<!-- TODO: Remove or change this placeholder text -->
	<string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
